--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,11 +3,12 @@
 #   aha regress $$CONFIG                # No daemon
 
 env:
-  CONFIG: ${CONFIG:-daily}
+  # Default config is "aha_pr"
+  CONFIG: ${CONFIG:-aha_pr}
 
 steps:
 
-- label: ":wrench: Build Docker Image"
+- label: "Build Docker Image"
   key: "docker-build"
   plugins:
   # Override standard checkout procedure with custom checkout script
@@ -36,6 +37,10 @@ steps:
         git clean -ffxdq
         set +x
         bin=$BUILDKITE_BUILD_CHECKOUT_PATH/.buildkite/bin
+
+        # (aha-flow steps is responsible for setting DEV_BRANCH)
+        # (https://buildkite.com/stanford-aha/aha-flow/settings/steps)
+        git checkout $$DEV_BRANCH || echo no dev branch found, continuing with master
 
         # Make sure env var BUILDKITE_PULL_REQUEST_REPO is set correctly
         source $$bin/update-pr-repo.sh
@@ -80,7 +85,7 @@ steps:
   agents:
     docker: true
 
-- label: ":hammer: Amber Gold RTL 1m"
+- label: "Amber Gold RTL 1m"
   key: "goldcheck-amber"
   depends_on: "docker-build"
   # Set soft_fail so that failing gold check does not fail pipeline.
@@ -104,7 +109,7 @@ steps:
   agents:
     docker: true
 
-- label: ":hammer: Onyx Gold RTL 1m"
+- label: "Onyx Gold RTL 1m"
   key: "goldcheck-onyx"
   depends_on: "docker-build"
   # Set soft_fail so that failing gold check does not fail pipeline.
@@ -128,7 +133,7 @@ steps:
   agents:
     docker: true
 
-- label: ":hammer: Onyx Integration Tests"
+- label: "Onyx Integration Tests"
   key: "integration-tests"
   depends_on: "docker-build"
 
@@ -156,7 +161,7 @@ steps:
           mkdir -p temp; rm -rf temp/.TEST; touch temp/.TEST
 
           # If trigger came from a submod repo, we will do "pr" regressions.
-          # Otherwise, trigger came from aha repo push/pull and we just do "daily" regressions.
+          # Otherwise, trigger came from aha repo push/pull and we do (default) "aha_pr" regressions.
           # We use "env" file to pass information between steps.
           # THIS ASSUMES THAT ALL STEPS RUN ON SAME HOST MACHINE and thus see the same commdir!
 
@@ -223,13 +228,247 @@ steps:
   - if test -e /buildkite/DO_PR; then
       echo "Trigger came from submod repo pull request; use pr config";
       export CONFIG=pr;
+    elif [ "$$CONFIG" == "aha_pr" ]; then
+      export CONFIG=pr_aha1;
+      echo "Trigger came from aha repo; use $$CONFIG";
     else
-      echo "Trigger came from aha repo; use default config";
+      echo "Trigger came from OTHER, use default and/or config=$$CONFIG";
     fi;
-  - aha regress $$CONFIG --daemon auto --include-dense-only-tests
+  - set -x; aha regress $$CONFIG --daemon auto --include-dense-only-tests
+  # - aha regress pr_aha1 --daemon auto --include-dense-only-tests || exit 13
+
   # We report success to the aha-flow app by removing the .TEST file,
-  # which is created in the post-checkout hook and checked for in the
-  # pre-exit hook.
+  # which is created in the post-checkout hook and checked for in the pre-exit hook.
+
+  # Okay to remove or check but DO NOT CREATE anything in /buildkite, it is owned by root :(
+  - echo "--- Removing Failure Canary"
+  - ls -al /buildkite
+  - rm -rf /buildkite/.TEST
+  - ls -al /buildkite
+
+  agents:
+    docker: true
+
+- label: "Regress 2"
+  key: "integration-tests2"
+  depends_on: "docker-build"
+
+  plugins:
+    - uber-workflow/run-without-clone:
+    - docker#v3.2.0:
+        image: garnet:aha-flow-build-${BUILDKITE_BUILD_NUMBER}
+        volumes:
+          - "/cad/:/cad"
+          - "./temp:/buildkite:rw"
+        mount-checkout: false
+        skip-checkout: true
+        propagate-environment: true
+        environment:
+          - CONFIG
+          - FLOW_REPO
+        shell: ["/bin/bash", "-e", "-c"]
+    - improbable-eng/metahook:
+
+        pre-command: |
+          echo "+++ OIT PRE COMMAND HOOK BEGIN"
+
+          # Use temp/.TEST to pass fail/success info into and out of docker container
+          echo Renewing `pwd`/temp/.TEST
+          mkdir -p temp; rm -rf temp/.TEST; touch temp/.TEST
+
+          # If trigger came from a submod repo, we will do "pr" regressions.
+          # Otherwise, trigger came from aha repo push/pull and we just do "aha_pr" regressions.
+          # We use "env" file to pass information between steps.
+          # THIS ASSUMES THAT ALL STEPS RUN ON SAME HOST MACHINE and thus see the same commdir!
+
+          # env file sets REQUEST_TYPE to one of "AHA_PUSH", "AHA_PR", or "SUBMOD_PR"
+          # also sets "PR_TAIL_REPO" to requesting submod e.g. "garnet"
+          set -x; cat /var/lib/buildkite-agent/builds/DELETEME/env-$$BUILDKITE_BUILD_NUMBER; set +x
+          source /var/lib/buildkite-agent/builds/DELETEME/env-$$BUILDKITE_BUILD_NUMBER
+
+          echo "--- Pass DO_PR info to docker"
+          echo "Info gets passed to docker by mounting temp dir as /buildkite omg omg"
+          if [ "$$REQUEST_TYPE" == "SUBMOD_PR" ]; then
+              echo "+++ SET DO_PR"; mkdir -p temp; touch temp/DO_PR
+              if [ "$$PR_REPO_TAIL" == "garnet" ]; then
+                  # Delete .TEST as a sign to skip tests
+                  echo "+++ Garnet PR detected, so skip redundant regressions"
+                  rm -rf temp/.TEST
+              fi
+          else
+              echo "+++ UNSET DO_PR"; /bin/rm -rf temp/DO_PR
+          fi
+          test -e temp/DO_PR && echo FOO temp/DO_PR exists || echo FOO temp/DO_PR not exists
+
+          echo "--- OIT PRE COMMAND HOOK END"
+
+        pre-exit: |
+          echo "+++ CHECKING EXIT STATUS"; set -x
+          echo "Send status to github."
+          cd $$BUILDKITE_BUILD_CHECKOUT_PATH
+
+          # Docker will have removed temp/.TEST if all the tests passed
+          if [ "$$BUILDKITE_COMMAND_EXIT_STATUS" == 0 ]; then
+              test -f temp/.TEST && export BUILDKITE_COMMAND_EXIT_STATUS=13
+          fi
+          /bin/rm -rf temp
+
+          # status-update will magically override "success" with "failure" as appropriate!
+          # (Based on BUILDKITE_COMMAND_EXIT_STATUS and BUILDKITE_LAST_HOOK_EXIT_STATUS)
+          ~/bin/status-update success
+
+  commands:
+  - |
+    if ! test -e /buildkite/.TEST; then
+        echo "+++ No .TEST detected, so skip redundant regressions"
+        exit
+    fi
+  - |
+    if test -e /buildkite/DO_PR; then
+        echo "--- DO_PR SET (TRUE)"
+    else
+        echo "--- DO_PR UNSET (FALSE)"
+    fi
+  - source /aha/bin/activate
+  - source /cad/modules/tcl/init/sh
+  - module load base incisive xcelium/19.03.003 vcs/T-2022.06-SP2
+  # make /bin/sh symlink to bash instead of dash:
+  - echo "dash dash/sh boolean false" | debconf-set-selections
+  - DEBIAN_FRONTEND=noninteractive dpkg-reconfigure dash
+  - apt update
+  - apt install time
+  - ls /aha
+  - echo    "--- PIP FREEZE"; pip freeze
+  - echo -n "--- GARNET VERSION "; (cd garnet && git rev-parse --verify HEAD)
+  # Run regression tests
+  - if test -e /buildkite/DO_PR; then
+      echo "Trigger is not from aha repo; so we don't do this test (yet)";
+    elif [ "$$CONFIG" == "aha_pr" ]; then
+      export CONFIG=pr_aha2;
+      echo "Trigger came from aha repo; use pr_aha2";
+      set -x; aha regress pr_aha2 --daemon auto --include-dense-only-tests || exit 13;
+    else
+      echo "Trigger is not from aha repo; so we don't do this test (yet)";
+    fi;
+  # - aha regress $$CONFIG --daemon auto --include-dense-only-tests
+
+  # We report success to the aha-flow app by removing the .TEST file,
+  # which is created in the post-checkout hook and checked for in the pre-exit hook.
+
+  # Okay to remove or check but DO NOT CREATE anything in /buildkite, it is owned by root :(
+  - echo "--- Removing Failure Canary"
+  - ls -al /buildkite
+  - rm -rf /buildkite/.TEST
+  - ls -al /buildkite
+
+  agents:
+    docker: true
+
+- label: "Regress 3"
+  key: "integration-tests3"
+  depends_on: "docker-build"
+
+  plugins:
+    - uber-workflow/run-without-clone:
+    - docker#v3.2.0:
+        image: garnet:aha-flow-build-${BUILDKITE_BUILD_NUMBER}
+        volumes:
+          - "/cad/:/cad"
+          - "./temp:/buildkite:rw"
+        mount-checkout: false
+        skip-checkout: true
+        propagate-environment: true
+        environment:
+          - CONFIG
+          - FLOW_REPO
+        shell: ["/bin/bash", "-e", "-c"]
+    - improbable-eng/metahook:
+
+        pre-command: |
+          echo "+++ OIT PRE COMMAND HOOK BEGIN"
+
+          # Use temp/.TEST to pass fail/success info into and out of docker container
+          echo Renewing `pwd`/temp/.TEST
+          mkdir -p temp; rm -rf temp/.TEST; touch temp/.TEST
+
+          # If trigger came from a submod repo, we will do "pr" regressions.
+          # Otherwise, trigger came from aha repo push/pull and we just do "aha_pr" regressions.
+          # We use "env" file to pass information between steps.
+          # THIS ASSUMES THAT ALL STEPS RUN ON SAME HOST MACHINE and thus see the same commdir!
+
+          # env file sets REQUEST_TYPE to one of "AHA_PUSH", "AHA_PR", or "SUBMOD_PR"
+          # also sets "PR_TAIL_REPO" to requesting submod e.g. "garnet"
+          set -x; cat /var/lib/buildkite-agent/builds/DELETEME/env-$$BUILDKITE_BUILD_NUMBER; set +x
+          source /var/lib/buildkite-agent/builds/DELETEME/env-$$BUILDKITE_BUILD_NUMBER
+
+          echo "--- Pass DO_PR info to docker"
+          echo "Info gets passed to docker by mounting temp dir as /buildkite omg omg"
+          if [ "$$REQUEST_TYPE" == "SUBMOD_PR" ]; then
+              echo "+++ SET DO_PR"; mkdir -p temp; touch temp/DO_PR
+              if [ "$$PR_REPO_TAIL" == "garnet" ]; then
+                  # Delete .TEST as a sign to skip tests
+                  echo "+++ Garnet PR detected, so skip redundant regressions"
+                  rm -rf temp/.TEST
+              fi
+          else
+              echo "+++ UNSET DO_PR"; /bin/rm -rf temp/DO_PR
+          fi
+          test -e temp/DO_PR && echo FOO temp/DO_PR exists || echo FOO temp/DO_PR not exists
+
+          echo "--- OIT PRE COMMAND HOOK END"
+
+        pre-exit: |
+          echo "+++ CHECKING EXIT STATUS"; set -x
+          echo "Send status to github."
+          cd $$BUILDKITE_BUILD_CHECKOUT_PATH
+
+          # Docker will have removed temp/.TEST if all the tests passed
+          if [ "$$BUILDKITE_COMMAND_EXIT_STATUS" == 0 ]; then
+              test -f temp/.TEST && export BUILDKITE_COMMAND_EXIT_STATUS=13
+          fi
+          /bin/rm -rf temp
+
+          # status-update will magically override "success" with "failure" as appropriate!
+          # (Based on BUILDKITE_COMMAND_EXIT_STATUS and BUILDKITE_LAST_HOOK_EXIT_STATUS)
+          ~/bin/status-update success
+
+  commands:
+  - |
+    if ! test -e /buildkite/.TEST; then
+        echo "+++ No .TEST detected, so skip redundant regressions"
+        exit
+    fi
+  - |
+    if test -e /buildkite/DO_PR; then
+        echo "--- DO_PR SET (TRUE)"
+    else
+        echo "--- DO_PR UNSET (FALSE)"
+    fi
+  - source /aha/bin/activate
+  - source /cad/modules/tcl/init/sh
+  - module load base incisive xcelium/19.03.003 vcs/T-2022.06-SP2
+  # make /bin/sh symlink to bash instead of dash:
+  - echo "dash dash/sh boolean false" | debconf-set-selections
+  - DEBIAN_FRONTEND=noninteractive dpkg-reconfigure dash
+  - apt update
+  - apt install time
+  - ls /aha
+  - echo    "--- PIP FREEZE"; pip freeze
+  - echo -n "--- GARNET VERSION "; (cd garnet && git rev-parse --verify HEAD)
+  # Run regression tests
+  - if test -e /buildkite/DO_PR; then
+      echo "Trigger is not from aha repo; so we don't do this test (yet)";
+    elif [ "$$CONFIG" == "aha_pr" ]; then
+      export CONFIG=pr_aha3;
+      echo "Trigger came from aha repo; use pr_aha3";
+      set -x; aha regress pr_aha3 --daemon auto --include-dense-only-tests || exit 13;
+    else
+      echo "Trigger is not from aha repo; so we don't do this test (yet)";
+    fi;
+  # - aha regress $$CONFIG --daemon auto --include-dense-only-tests
+
+  # We report success to the aha-flow app by removing the .TEST file,
+  # which is created in the post-checkout hook and checked for in the pre-exit hook.
 
   # Okay to remove or check but DO NOT CREATE anything in /buildkite, it is owned by root :(
   - echo "--- Removing Failure Canary"
@@ -247,6 +486,8 @@ steps:
   soft_fail: true
   depends_on:
   - "integration-tests"
+  - "integration-tests2"
+  - "integration-tests3"
   - "goldcheck-amber"
   - "goldcheck-onyx"
   commands:
