--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -98,9 +98,18 @@ steps:
 
 - wait: ~
 
-- label: "Amber Gold RTL 1m"
-  # Set soft_fail so that failing gold check does not fail pipeline.
-  soft_fail: true
+########################################################################
+# AMBER GOLD step
+
+- label: "Amber Gold RTL"
+  soft_fail: true  # So that failing gold check does not fail pipeline.
+  plugins:
+    - uber-workflow/run-without-clone:  # Don't need clone when using docker
+    - docker#v3.2.0:
+        image: garnet:aha-flow-build-${BUILDKITE_BUILD_NUMBER}
+        volumes: ["/cad/:/cad"]
+        shell:   ["/bin/bash", "-e", "-c"]
+        mount-checkout: false
   commands: |
     echo "/aha/.buildkite/bin/rtl-goldcheck.sh amber"
     if ! /aha/.buildkite/bin/rtl-goldcheck.sh amber; then
@@ -109,14 +118,6 @@ steps:
         echo "$$msg" | buildkite-agent annotate --style "error" --context amber
         exit 13
     fi
-  plugins:
-    - uber-workflow/run-without-clone:
-    - docker#v3.2.0:
-        image: garnet:aha-flow-build-${BUILDKITE_BUILD_NUMBER}
-        volumes:
-          - "/cad/:/cad"
-        mount-checkout: false
-        shell: ["/bin/bash", "-e", "-c"]
 
 - label: "Onyx Gold RTL 1m"
   # Set soft_fail so that failing gold check does not fail pipeline.
