try out DELETEME-dir cleaner

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -81,6 +81,10 @@ steps:
   commands:
   - echo "+++ BDI PIPELINE.XML COMMANDS BEGIN"
 
+  # Remove DELETEME* dirs older than one week
+  - echo "--- Cleanup old common areas"
+  - find /var/lib/buildkite-agent/builds/DELETEME* -type d -mtime -7 -exec /bin/rm -rf {} \; || echo okay
+
   - echo "--- Save repo things in common area"
   - mkdir -p $$COMMON
   - cp $$BUILDKITE_BUILD_CHECKOUT_PATH/.buildkite/bin/regress-metahooks.sh $$COMMON
