--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -81,6 +81,11 @@ steps:
   commands:
   - echo "+++ BDI PIPELINE.XML COMMANDS BEGIN"
 
+#   # Remove docker images older than one day
+#   - echo "--- Cleanup old docker images"
+#   - docker image ls | awk '/(days|weeks|months) ago/ {print $3}' || echo okay
+#   - docker image ls | awk '/(days|weeks|months) ago/ {print $3}' | xargs docker image rm || echo okay
+
   # Remove DELETEME* dirs older than one week
   - echo "--- Cleanup old common areas"
   - find /var/lib/buildkite-agent/builds/DELETEME* -type d -mtime +7 -exec /bin/rm -rf {} \; || echo okay
